# tidpan2026-sipm-dcr-lab-instructor

./: .gitignore  README.md  pyproject.toml
data/: README.md  massibo_example.npy
docs/: common_mistakes.md  distribution.md  extensions.md  instructor_checklist.md  instructor_notes.md  lab_handout.md  live_demo_script.md
notebooks/: 01_sipm_dark_counts.ipynb
solutions/: README.md  analysis_solution.py  expected_results.md  instructor_solution.py
src/sipm_lab/: __init__.py  classification.py  io.py  plotting.py  statistics.py  timing.py  waveforms.py
student/: README.md  __init__.py  analysis.py
tests/: README.md  conftest.py  test_classification.py  test_io.py  test_statistics.py  test_timing.py  test_waveforms.py
tools/: export_student_repo.py
